# crewAI-examples

./: crewai_integration_analysis.md  integration_architecture.md
crews/agentbay_sdk/: LOGGING.md  README.md  TROUBLESHOOTING.md  diagnose.py  env.example  pyproject.toml
crews/agentbay_sdk/src/agentbay_sdk/: crew.py
crews/agentbay_sdk/src/agentbay_sdk/api/: wuying_agentbay_wrapper.py
crews/agentbay_sdk/src/agentbay_sdk/config/: agents.yaml  tasks.yaml
crews/agentbay_sdk/src/agentbay_sdk/tests/: test_agentbay_code_flow.py
crews/agentbay_sdk/src/agentbay_sdk/tools/: agentbay_code_tool.py  tool_schema.py
integrations/agentbay_sdk/: .env.example  README.md  main.py  pyproject.toml  runtime.py  tools.py
